2010-09-17  Robert Larice
 * Makefile.am ,
 * src/include/Makefile.am ,
 * src/maths/misc/Makefile.am ,
 * src/maths/poly/Makefile.am ,
 * src/spicelib/devices/ndev/Makefile.am ,
 * src/xspice/Makefile.am ,
 * tests/bsim3soi/Makefile.am ,
 * tests/bsim3soidd/Makefile.am ,
 * tests/bsim3soifd/Makefile.am ,
 * tests/bsim3soipd/Makefile.am ,
 * tests/mesa/Makefile.am :
    `make dist' add some missing artifacts

2010-09-17  Robert Larice
 * configure.ac ,
 * src/spicelib/devices/Makefile.am :
    `make dist' improvements for `NDEV'

2010-09-17  Robert Larice
 * Makefile.am ,
 * .cvsignore ,
 * config/.cvsignore ,
 * configure.ac :
    use a subdirectory `config' for autoconfigure related artifacts

2010-09-17  Robert Larice
 * **/Makefile.am :
    whitespace cleanup

2010-09-15 Holger Vogt
 * com_measure2.c: prevent seg fault in meas ac, if real input
 * examples/control_structs/MonteCarlo.sp: update, add measure

2010-09-12  Robert Larice
 * src/main.c :
    fix incorrect buffer type, and exit(1) on failure to open a tempfile

2010-09-08 Holger Vogt
 * inp.c, inpcom.c: include libiberty.h removed
 * terminal.c, ivars.c, ifnewuid.c, inperror.c, tclspice.c, main.c:
   rework of #ifdef HAVE_ASPRINTF ...
 * fteparse.h: #undef AND /* obsolete macro in ansidecl.h */ added

2010-09-08  Robert Larice
 * src/frontend/wdisp/windisp.c ,
 * src/frontend/wdisp/winprint.c :
    fix commit from today, `function rename, Arc() -> DevDrawArc()`

2010-09-08  Robert Larice
 * src/include/const.h :
    rename include file wrapper, #ifndef CONST  ->  CONST_H

2010-09-08  Robert Larice
 * src/frontend/display.c ,
 * src/include/ftedev.h :
    function rename, struct DISPDEVICE . Text() -> DrawText()

2010-09-08  Robert Larice
 * src/frontend/display.c ,
 * src/include/ftedev.h :
    function rename, struct DISPDEVICE . Arc() -> DrawArc()

2010-09-08  Robert Larice
 * src/frontend/display.c ,
 * src/frontend/display.h ,
 * src/frontend/plotting/graf.c ,
 * src/frontend/plotting/grid.c :